Ingress/IngressController.yml
# This is an ingress controller that's used to control the traffic that's coming into the cluster and
#it's used to route the traffic to the correct services

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  templates:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0

      args: # These arguments that the container should start with. It's similar to to commands in a linux terminal
       - /nginx-ingress-controller
       #This argument below tells the Nginx Ingress Controller to use a specific ConfigMap named nginx-configuration
        #for its runtime configuration.
        #This ConfigMap contains custom configuration settings for Nginx.
       - --configmap=$ (POD_NAMESPACE) /nginx-configuration
