Ingress/MatchingService.yml
apiVersion: v1
kind: Service
metadata:
  name: service1  # This name must match the name specified in the Ingress rule
spec:
  selector:
    app: web-app-service1
  ports:
    - protocol: TCP
      port: 80 # This port must match the port specified in the Ingress rule
      targetPort: 80
